docs Changed the content of home page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     Hi! I am Swapnil.
+    I am currently learning at NeoGCamp. 
+    Tanay Pratap sir is teaching me at NeoGCamp.
+    I am currently building this site as part of Level Zero. 
+    Web development is an interesting topic. 
 </body>
 </html>
