--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     Tanay Pratap sir is teaching me at NeoGCamp.
     I am currently building this site as part of Level Zero. 
     Web development is an interesting topic. 
+
+    I have worked on few CLI apps. I will showcase it here tomorrow. 
 </body>
 </html>
