update favorite movie book

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     Tanay Pratap sir is teaching me at NeoGCamp.
     I am currently building this site as part of Level Zero. 
     Web development is an interesting topic. 
+
+    My favorite movie is Kung Fu panda 
+    My favorite book currently is JavaScript.
 </body>
 </html>
