update conflict details

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     I am currently building this site as part of Level Zero. 
     Web development is an interesting topic. 
 
+    I have worked on few CLI apps. I will showcase it here tomorrow. 
+
     My favorite movie is Kung Fu panda 
     My favorite book currently is JavaScript.
 </body>
