update mistakes made

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     Web development is an interesting topic. 
 
     I have worked on few CLI apps. I will showcase it here tomorrow. 
+
+    Okay there is glitch. Need to learn the steps to publish changes.
+    Create a branch. Add branch name. 
+    Come to VS code and change it. 
+
 </body>
 </html>
