added new favorite movie

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     Create a branch. Add branch name. 
     Come to VS code and change it. 
 
-    Some text added. 
+    Some text added.
+
+    My favorite movie is 3 Idiots. 
 </body>
 </html>
