--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     Some text added.
 
-    My favorite movie is 3 Idiots. 
+    My favorite movie is 3 Idiots.
+    Okay my next movie is let's say Shang Chi.  
 </body>
 </html>
