--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
 
     My favorite movie is 3 Idiots.
     Okay my next movie is let's say Shang Chi.  
+
+    This is added in new branch. 
 </body>
 </html>
