update index.html for branch testing

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
     My favorite movie is 3 Idiots.
     Okay my next movie is let's say Shang Chi.  
     Two favorite movies. Iron Man and Taarak Mehta ka Oolta Chasma old episodes.
+
+    Okay so this is the new latest test for branching. 
+    
 </body>
 </html>
