update index.html with updated movies.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
 
     I have worked on few CLI apps. I will showcase it here tomorrow. 
 
-    Okay there is glitch. Need to learn the steps to publish changes.
-    Create a branch. Add branch name. 
-    Come to VS code and change it. 
+    My favorite movie is 3 Idiots and Iron Man.
 
-    Some text added.
-
-    My favorite movie is 3 Idiots.
-    Okay my next movie is let's say Shang Chi.  
-    Two favorite movies. Iron Man and Taarak Mehta ka Oolta Chasma old episodes.
-
-    Okay so this is the new latest test for branching. 
-    
-    Okay this is for branch test - 2. 
 </body>
 </html>
